8237495: Java MIDI fails with a dereferenced memory error when asked to send a raw 0xF7