src/java.desktop/share/native/libjsound/MidiOutDevice.c
@@ -133,7 +133,7 @@ Java_com_sun_media_sound_MidiOutDevice_nSendLongMessage(JNIEnv* e, jobject thisO
     }
     /* "continuation" sysex messages start with F7 (instead of F0), but
        are sent without the F7. */
-    if (data[0] == 0xF7) {
+    if (data[0] == 0xF7 && size > 1) {
         data++;
         size--;
     }
